--- a/sass/style.scss
+++ b/sass/style.scss
@@ -4,3 +4,4 @@
 @import "./include/variables.scss";
 @import "./include/golobal.scss";
 @import "./include/utility.scss";
+@import "./include/color.scss";
